--- a/.github/workflows/perltest.yml
+++ b/.github/workflows/perltest.yml
@@ -21,6 +21,7 @@ jobs:
         perl: [ 'latest' ]
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
+      - run: echo "Event is: " ${{ env.GITHUB_EVENT_NAME }}
       - uses: actions/checkout@v3
       - name: Set up perl
         uses: shogo82148/actions-setup-perl@v1
