--- a/.github/workflows/perltest.yml
+++ b/.github/workflows/perltest.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     uses: PerlToolsTeam/github_workflows/.github/workflows/cpan-test.yml@main
 
   coverage:
